fix: fixed height cutting off with more menu items

--- a/menu-app/src/app/menu/menu.component.scss
+++ b/menu-app/src/app/menu/menu.component.scss
@@ -1,7 +1,7 @@
 .rectangle{
   border: solid 0.5px #979797;
   background-image: linear-gradient(to bottom, #ffffff 57%, #ced6e7);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .head{
